# ECE472-Deep-Learning

./: .gitignore  Deep_Learning_Final_Paper.docx
Project 1 - Gaussian Basis Sinewave/: __init__.py  config.py  data.py  model.py  plotting-LegionT5.py  plotting.py  training-LegionT5.py  training.py
Project 2 - Spiral Classification/: README.md  __init__.py  config.py  data.py  model.py  plotting.py  training.py
Project 3- CNN MNIST/: README.md  __init__.py  config.py  data.py  model.py  output.txt  test.py  training.py
Project 4- CIFAR100/: README.md  __init__.py  config.py  data.py  model.py  output-cifar10-final-final.txt  output-cifar100-final-final.txt  project_summmary.txt  test.py  training.py
Project 5 - AG News Classification/: README.md  __init__.py  config.py  data.py  model.py  training.py
Project 6 - MultiHeadAttention Transformer/: README.md  __init__.py  config.py  model.py  tests.py
Project 7 - Sparse Autoencoder Feature Map/: README.md  __init__.py  config.py  data.py  model.py  plotting.py  training.py
hw01/: README.md  pyproject.toml
hw01/src/hw01/: __init__.py  basis_expansion.py  cli.py  linear.py
